--- a/.github/workflows/run-go-script.yml
+++ b/.github/workflows/run-go-script.yml
@@ -3,7 +3,7 @@ name: Run Go Script
 on:
   schedule:
     # Run the job every 1 minute
-    - cron: '*/1 * * * *'
+    - cron: '* * * * *'
 
 jobs:
   run-go-script:
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.16  # specify the Go version you are using
+        go-version: 1.21.2  # specify the Go version you are using
       
     - name: Run Go Script
       run: go run main.go
