--- a/.github/workflows/run-go-script.yml
+++ b/.github/workflows/run-go-script.yml
@@ -3,7 +3,7 @@ name: Run Go Script
 on:
   schedule:
     # Run the job every 1 minute
-    - cron: '* * * * *'
+    - cron: '*/2 * * * *'
 
 jobs:
   run-go-script:
