--- a/.github/workflows/run-go-script.yml
+++ b/.github/workflows/run-go-script.yml
@@ -17,7 +17,18 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.21.2  # specify the Go version you are using
-      
+    
+    - name: Cache Go dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
+    - name: Install dependencies
+      run: go mod download
+
     - name: Run Go Script
       run: go run main.go
       env:
