--- a/.github/workflows/run-go-script.yml
+++ b/.github/workflows/run-go-script.yml
@@ -1,11 +1,11 @@
 name: Run Go Script
 
 on:
-  workflow_dispatch:  # This allows manual triggering from the GitHub UI
+  # workflow_dispatch:  # This allows manual triggering from the GitHub UI
 
-  # schedule:
+  schedule:
     # Run the job every 5 minute
-    # - cron: '*/5 * * * *'
+    - cron: '5 * * * *'
 
 jobs:
   run-go-script:
